samples/_failures_safe/1761343782_26102b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_007b8f15.c: In function ‘main’:
./samples/SAFE/__tmp_007b8f15.c:204:18: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  204 |     Token tokens[MAX_TOK
      |                  ^~~~~~~
      |                  MAX_TOKENS
./samples/SAFE/__tmp_007b8f15.c:204:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_007b8f15.c:204:25: error: expected ‘]’ at end of input
  204 |     Token tokens[MAX_TOK
      |                         ^
      |                         ]
./samples/SAFE/__tmp_007b8f15.c:204:5: error: expected declaration or statement at end of input
  204 |     Token tokens[MAX_TOK
      |     ^~~~~
